src/routes/style.css
:root {
  --mainBG: 20, 20, 20;
  --secBG: rgb(40 40 40);
  --accent: 0, 255, 190;
  --accent2: 0, 208, 255;
  --main-border-color: rgb(100, 100, 100);
  --sec-border-color: rgba(128, 128, 128, 0.4);
  --terc-border-color: rgba(128, 128, 128, 0.2);
  --nav-height: 75.5px;
  color-scheme: dark;
  --post-report-icon-color: rgb(255, 0, 0);
  --nav-icon-fill: rgba(255, 255, 255, 0.236);
  --menu-link-hover: rgb(206, 206, 206);
  --menu-red-hover: rgb(255, 103, 103);
  --main-border-radius: 14px;
  --search-border-brighter: rgba(255, 255, 255, 0.3);
  --nav-icon-current-color: white;
  --red-button-bg: 227, 51, 51;
  --tercBG: rgb(59 59 59);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: white;
}

::-webkit-scrollbar {
  width: 7px;
  border-radius: 3px;
  background-color: var(--main-border-color);
}

::-webkit-scrollbar-thumb {
  background: var(--secBG);
  border-radius: 3px;
  border: 1px var(--main-border-color) solid;
}

::-webkit-scrollbar-thumb:hover {
  border: 1px rgb(150, 150, 150) solid;
}

header {
  min-height: 100svh;
}

.flex-center-all {
  display: flex;
  justify-content: center;
  align-items: center;
}

body {
  background: rgb(var(--mainBG));
  min-height: 100svh;
}

body:has(.no-nav) nav,
body:has(.user-doesnt-exist-bro) nav {
  display: none !important;
}

body:has(.no-nav),
body:has(.user-doesnt-exist-bro),
body:has(.error-wrp) {
  margin-top: 0 !important;
}

body:has(.no-nav),
body:has(.user-doesnt-exist-bro) {
  margin-top: 0;
}

body:has(.post-top-nav) main {
  margin-top: var(--post-nav-height);
}

p {
  line-height: 1.4;
}

a {
  text-decoration: none;
  font-size: inherit;
  transition: .3s;
  font-weight: 700;
}

p a:hover {
  filter: contrast(1%);
}

.sec-bg-element {
  background: var(--secBG);
  border-radius: 27px;
  padding: 27px;
  box-shadow: 0 5px 12px 3px rgba(0, 0, 0, 0.318);
}

.terc-bg-element {
  background: var(--tercBG);
  border-radius: 27px;
  padding: 13px;
}

.form h2 {
  text-align: center;
}

.form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
}

.form:not(.form-content) {
  margin-block: 10px;
}

.form-element {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.form-element label,
.label {
  color: rgb(188, 188, 188);
  font-size: .9rem;
  padding: 4px;
  margin-bottom: 2px;
  margin-left: -2px;
  transition: .1s;
  max-width: fit-content;
}

.form-element label:hover,
.label:hover {
  color: white;
}

.user-input {
  border-radius: var(--main-border-radius);
  padding: 12px 19px;
  font-size: 1rem;
}

.user-page-input {
  border-radius: 10px;
  padding: 9px 16px;
  font-size: 1rem;
}

textarea.user-input-text {
  resize: vertical;
}

.user-input-text {
  background: transparent;
  border: 1px var(--main-border-color) solid;
  outline: none;
  transition: .3s;
}

.user-input-text:hover {
  border-color: white;
}

.user-input-text:focus {
  border-color: white;
}

.user-input-text:focus::placeholder {
  color: white;
}

.gradient-text,
p a {
  background-clip: text;
  background: -webkit-linear-gradient(0deg, rgb(var(--accent)), rgb(var(--accent2)));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.button-element,
.button-link {
  cursor: pointer;
  border: none;
  transition: .3s;
  font-weight: 700;
}

.primary-button {
  color: var(--secBG);
  background: linear-gradient(90deg, rgb(var(--accent)), rgb(var(--accent2)));
}

.secondary-button {
  background: transparent;
  border: 1px var(--main-border-color) solid;
}

.red-bright-button {
  background: linear-gradient(270deg, rgb(255, 110, 110), rgb(var(--red-button-bg)));
  color: white;
}

.less {
  color: rgb(168, 168, 168);
}

.other-login-wrp {
  display: flex;
  justify-content: center;
  width: 100%;
  gap: 9px;
}

button {
  border: none;
}

.other-login {
  border: 1px var(--main-border-color) solid;
  padding: 10px;
  border-radius: 100vw;
  cursor: pointer;
  max-width: 180px;
  width: 100%;
  transition: .15s;
  background: transparent;
}

.other-login:hover,
.other-login:focus {
  border-color: white;
}

.other-login-icon {
  max-height: 22px;
  width: auto;
  margin-left: 9px;
}

.login-line-wrp {
  width: 100%;
  display: flex;
  align-items: center;
}

.line {
  height: 1px;
  background: var(--main-border-color);
  width: 100%;
}

.login-or {
  margin-inline: 10px;
}

.error-wrp {
  text-align: center;
}

.error-wrp h2 {
  font-size: 3rem;
  font-weight: 800;
  letter-spacing: -1px;
}

.error-wrp p {
  color: rgba(182, 0, 0, 0.733);
  font-weight: 500;
}

.user-page-wrp {
  max-width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100svh;
}
/* ... */

